delete api & page navigation

--- a/views/addBook.html
+++ b/views/addBook.html
@@ -61,7 +61,7 @@
                         },
                         dataType: 'json',
                         contentType: 'application/json',
-                        url: '/api/books',
+                        url: '/api/addBook',
                         data: JSON.stringify(vm.postData)
                     }).done(function (res) {
                         // r.data.thumbnail_url = r.data.thumbnail_url || "https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1522478341968&di=c60886853463d9f62c8c49d6fe270426&imgtype=0&src=http%3A%2F%2Fwww.memobook.com.tw%2Fsaved%2F13%2F131210%2F13121009462755%2Fthumb%2Fp8_GK5DYP_1.jpg";
