--- a/views/home.html
+++ b/views/home.html
@@ -22,8 +22,7 @@
                 editedBook: {},
                 postData: null,
                 bookFile: '',
-                bookImg: '',
-                bookAudio: ''
+                bookImg: ''
             },
             methods: {
                 isDate: function (str) {
@@ -49,22 +48,13 @@
 
                 sendForm: function (postData) {
                     var that = this;
-                    if ($('#book_type').val() == '听书') {
-                        if (that.bookAudio.length == 0 || that.bookFile.length == 0 || that.bookImg.length == 0) {
-                            return;
-                        }
-                    } else {
-                        if (that.bookFile.length == 0 || that.bookImg.length == 0) {
-                            return;
-                        }
+                    if (that.bookFile.length == 0 || that.bookImg.length == 0) {
+                        return;
                     }
 
                     // AJAX提交JSON:
                     vm.postData.thumbnail_url = vm.bookImg;
                     vm.postData.txt_url = vm.bookFile;
-                    if ($('#book_type').val() == '听书') {
-                        vm.postData.audio_url = vm.bookAudio;
-                    }
                     $.ajax({
                         type: 'post',
                         headers: {
@@ -147,8 +137,6 @@
                         // $('#myAlert').show(); 请添加图书封面图
                     } else if ($('#txtFile').val() == '') {
                         // $('#myAlert').show(); 请添加图书txt文件
-                    } else if ($('#book_type').val() == '听书' && $('#audioFile').val() == '') {
-                        // $('#myAlert').show(); 请添加图书音频文件
                     } else {
                         $('#myLoading').show();
                         $('#updateBookBtn').attr('disabled', true);
@@ -315,7 +303,6 @@
                 $('#audio_group').hide();
                 vm.editedBook.type = 1;
             } else if ($('#book_type').val() == '听书') {
-                $('#audio_group').show();
                 vm.editedBook.type = 2;
             } else if ($('#book_type').val() == '杂志') {
                 $('#audio_group').hide();
@@ -474,6 +461,12 @@
                             新建
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/addArchive">
+                            <span data-feather="file"></span>
+                            新建资讯
+                        </a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -601,10 +594,10 @@
                                         </select>
                                     </div>
                                 </div>
-                                <div class="form-group" id="audio_group" style="display: none;">
+                                <!-- <div class="form-group" id="audio_group" style="display: none;">
                                     <label for="audioFile" class="col-form-label">音频文件</label>
                                     <input type="file" class="form-control-file" name="file" id="audioFile" accept="audio/*">
-                                </div>
+                                </div> -->
                                 <div class="form-group">
                                     <label for="thumbnail" class="col-form-label">封面图片</label>
                                     <input type="file" class="form-control-file" name="file" id="thumbnail" accept="image/*">
